# webdisplay

./: .gitignore  README.md  README.rst  plot.py  pyproject.toml  relay.py
src/webdisplay/: __init__.py  client.py  server.py
src/webdisplay/static/: index.html
