[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61.0"]

[project]
description = "Un toolkit pour vite coder un modèle pytorch d'IA utilisant MLflow"
version = "0.1.0"
name = "webdisplay"
dependencies = ["websockets"]

authors = [{ name = "Jean-François Lecomte", email = "zwergon@free.fr" }]

license = "Apache-2.0"

readme = "README.md"
requires-python = ">=3.10"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
webdisplay_server = "webdisplay.server:run"


[tool.setuptools.package-data]
webdisplay = ["*.html"]
